tests/gen-test/test_out/swap-macro.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
  --> swap-macro\root.ctl:38:1
   |
38 | swap! swap! fn -> main uint => 0 
   | ^^^^^ token located here
   |
   = info: grouped items -> list -> item

info: generated ir:


